--- a/MyApplication/src/main/res/values/strings.xml
+++ b/MyApplication/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">My Application</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-
+    <string name="app_name">FoursquareAndroid</string>
+    <string name="foursquare_place_show_on_map">Show on map</string>
+    <string name="foursquare_place_checkin">Checkin</string>
+    <string name="no_address_info_found">No address info found.</string>
+    <string name="checkin_msg">Checking in from Android app</string>
+    <string name="checkin">Checkin</string>
+    <string name="clear_credentials">Clear Credentials</string>
+    <string name="launch_oauth_flow">Launch OAuth Flow</string>
+    <string name="menu_logout">Logout</string>
 </resources>
